# latent-world-models-av

./: .gitignore  README.md  baselines.json  config.py  pyproject.toml  requirements.txt
analysis/: __init__.py  delta_cossim_summary.py  identify_best_encoder.py  paired_tests.py
configs/: attribution_annotations_example.json  canonical.yaml  dit.yaml  environment_scene_lists.yaml  full_manifest.json  trainval_subset_manifest.json
data/: __init__.py  dataset.py  embeddings.py  scene_captions.py  splits.py  temporal.py  transforms.py  z_hat.py
docs/: CANONICAL_ARTIFACTS.md
encoders/: __init__.py  _vqgan_arch.py  base.py  clip_enc.py  dinov2.py  vits16.py  vjepa2.py  vqvae.py
evaluation/: __init__.py  attribution_grid.py  dit_eval.py  dit_utils.py  exp_diversity.py  exp_dynamic_subset.py  exp_horizon_eval.py  gradcam.py  lang_scene_eval.py  latent_eval.py  metrics.py  perturbation.py  sidecars.py  tierb_eval.py  unified_cossim.py  warmstart_eval.py
examples/: generate_b6_5_outputs.py
figures/: __init__.py  render_cossim_comparison.py  render_dit_architecture.py  render_figures.py
models/: __init__.py  _train_utils.py  bc_baseline.py  diffusion.py  fourier_embed.py  lang_latent_pred.py  latent_dit.py  latent_dit_spatial.py  latent_pred.py  latent_pred_spatial.py  probe.py
outputs/: encoder_summary_with_ci.csv  paired_tests.csv  per_scenario_rmse.csv
scripts/: adopt_pilot_artifacts.py  aggregate_full_probes.py  backup_da11_hf.py  backup_spatial_vae_hf_modal.py  backup_to_hf.py  backup_vae_diffusion_hf_modal.py  build_cossim_figures.py  build_figures_full.py  (+49 more)
(+300 files in other folders)
